@@ -15,7 +15,7 @@
 /* символьный шрифт от гитхаба*/
 @font-face {
   font-family: "GeneralFoundicons";
-  src: url('http://github.com/zurb/foundation-icons/blob/master/foundation_icons_general/fonts/general_foundicons.woff?raw=true') format('woff');
+  src: url('/font/general_foundicons.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -78,17 +78,13 @@ body{
     width:16px;
     height:16px;
     margin-left:0.5%;
-    /* font-family: 'Octicons Regular'; */
     font-family: 'GeneralFoundicons';
-    font-size:16px;
 }
 .error::before{
     position: relative;
-    bottom : 4px;
     color:rgb(222, 41, 41);
     cursor:default;
-    /* content:'\f026'; */
-    /* content:'\f013'; */
+    content:'\f013'; 
 }
 .loading{
     position:relative;
