@@ -104,6 +104,8 @@ clicked on menu item.
 * Fixed bug with working links in path panel and
 with clicks on files.
 
+* Changed icons font from octicons to foundicons'
+
 
 2012.12.12, Version 0.1.8
 
